Profile: fix overflow

--- a/src/Styles/profile.css
+++ b/src/Styles/profile.css
@@ -1,6 +1,7 @@
 .profile {
   height: calc(100vh - var(--navbar-height));
   position: relative;
+  overflow: hidden;
 }
 
 .background-grid {
